--- a/public/inc/head.html
+++ b/public/inc/head.html
@@ -16,8 +16,11 @@
 		</div>
 		<div class="headR">
 			<p class="p1">
-				欢迎，
-				<?php echo cookie('name')?>
+				<a href="/reg">注册</a>
+
+				<!--欢迎，-->
+
+				<!--<?php echo cookie('name')?>-->
 			</p>
 			<p class="p2">
 				<a href="#" class="resetPWD">重置密码</a>&nbsp;&nbsp;<a
