--- a/public/inc/left.html
+++ b/public/inc/left.html
@@ -80,21 +80,27 @@
 				<dd>
 					<img class="coin11" src="../img/coin111.png" />
 					<img class="coin22" src="../img/coin222.png" />
-					<a href="/show" target="main" class="cks">查看</a>
+					<a href="/catelist" target="main" class="cks">查看</a>
 					<img class="icon5" src="../img/coin21.png" />
 				</dd>
 			</dl>
 			<dl class="system_log">
 				<dt>
 					<img class="icon1" src="../img/coin11.png" /><img class="icon2"
-						src="../img/coin12.png" /> 话题管理<img class="icon3"
+						src="../img/coin12.png" /> 分类管理<img class="icon3"
 						src="../img/coin19.png" /><img class="icon4"
 						src="../img/coin20.png" />
 				</dt>
 				<dd>
 					<img class="coin11" src="../img/coin111.png" /><img class="coin22"
-						src="../img/coin222.png" /><a href="../topic.html" target="main"
-						class="cks">话题管理</a><img class="icon5" src="../img/coin21.png" />
+						src="../img/coin222.png" /><a href="/addcate" target="main"
+						class="cks">分类添加</a><img class="icon5" src="../img/coin21.png" />
+				</dd>
+				<dd>
+					<img class="coin11" src="../img/coin111.png" />
+					<img class="coin22" src="../img/coin222.png" />
+					<a href="/catelist" target="main" class="cks">分类展示</a>
+					<img class="icon5" src="../img/coin21.png" />
 				</dd>
 			</dl>
 			<dl class="system_log">
@@ -136,6 +142,46 @@
 						src="../img/coin222.png" /><a href="../balance.html"
 						target="main" class="cks">收支管理</a><img class="icon5"
 						src="../img/coin21.png" />
+				</dd>
+			</dl>
+			<dl class="system_log">
+				<dt>
+					<img class="icon1" src="../img/coin17.png" />
+					<img class="icon2" src="../img/coin18.png" /> 角色管理
+					<img class="icon3" src="../img/coin19.png" />
+					<img class="icon4" src="../img/coin20.png" />
+				</dt>
+				<dd>
+					<img class="coin11" src="../img/coin111.png" />
+					<img class="coin22" src="../img/coin222.png" />
+					<a href="/role" target="main" class="cks">角色添加
+					</a><img class="icon5" src="../img/coin21.png" />
+				</dd>
+				<dd>
+					<img class="coin11" src="../img/coin111.png" />
+					<img class="coin22" src="../img/coin222.png" />
+					<a href="/rolelist" target="main" class="cks">角色列表
+					</a><img class="icon5" src="../img/coin21.png" />
+				</dd>
+			</dl>
+			<dl class="system_log">
+				<dt>
+					<img class="icon1" src="../img/coin17.png" />
+					<img class="icon2" src="../img/coin18.png" /> 权限管理
+					<img class="icon3" src="../img/coin19.png" />
+					<img class="icon4" src="../img/coin20.png" />
+				</dt>
+				<dd>
+					<img class="coin11" src="../img/coin111.png" />
+					<img class="coin22" src="../img/coin222.png" />
+					<a href="/priv" target="main" class="cks">权限添加
+					</a><img class="icon5" src="../img/coin21.png" />
+				</dd>
+				<dd>
+					<img class="coin11" src="../img/coin111.png" />
+					<img class="coin22" src="../img/coin222.png" />
+					<a href="/privlist" target="main" class="cks">权限列表
+					</a><img class="icon5" src="../img/coin21.png" />
 				</dd>
 			</dl>
 			<dl class="system_log">
